Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.5.2
-
Fix Version/s: 10.5.3
-
Component/s: Storage Engine - InnoDB
-
Labels:
Description
In MDEV-15528, some scrubbing-related status variables were removed along with the background scrubbing code. The status variable INNODB_ENCRYPTION_NUM_KEY_REQUESTS was inadvertently removed as part of that.
Let us restore the status variable and add a test that lists all InnoDB status variables, to catch similar regressions in the future.
Attachments
Issue Links
- is caused by
-
MDEV-15528 Avoid writing freed InnoDB pages
-
- Closed
-